--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   go:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: build/Dockerfile
     command: /bin/sh -c "go run main.go"
     stdin_open: true
     tty: true
@@ -11,3 +11,22 @@ services:
       - .:/app
     ports:
       - 8080:8080
+  
+  db:
+    image: mysql:5.7
+    environment: 
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: go_db
+      MYSQL_USER: go_user
+      MYSQL_PASSWORD: password
+      TZ: 'Asia/Tokyo'
+    command: mysqld --character-set-server=utf8m4 --collation-server=utf8m4_unicode_ci
+    volumes:
+      - db-data:/var/lib/mysql
+      - ./db/my.cnf:/etc/mysql/conf.d/mycnf
+    ports:
+      - 3306:3306
+    
+volumes: 
+  db-data:
+    driver: local
