--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: build/Dockerfile
-    command: /bin/sh -c "go run main.go"
+    command: air -c .air.toml
     container_name: go
     environment:
       - PORT
